package com.kailash.tutorial.swing.ch30.gui;

public interface PrefsListener {
    void preferencesSet(String user, String password, int port);
}
