package com.kailash.tutorial.swing.ch30.gui;

/**
 * Created by kailash on 3/30/20.
 */
public interface StringListener {
    void textEmitted(String text);
}
